--- a/app/src/main/res/layout/activity_camera_view.xml
+++ b/app/src/main/res/layout/activity_camera_view.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <SurfaceView
+    <TextureView
         android:id="@+id/cameraview"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
@@ -24,8 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:src="@drawable/ic_launcher"
         android:background="#FFFFFF"
+        android:src="@drawable/ic_launcher"
         android:text="Large Text" />
 
 </RelativeLayout>
